[package]
name = "arthas-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.20.0", features = ["invocation"] }
dirs = "4.0.0"
semver = "1.0.14"
reqwest = { version = "0.11.13", features = ["blocking"] }
temp-dir = "0.1.11"
chrono = "0.4.23"
zip-extract = "0.1.1"

[build-dependencies]
walkdir = "2"
